[tool.poetry]
name = "writer-framework-default"
version = "0.1.0"
description = ""
authors = ["Andres Montenegro <andresckamilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
writer = {version = "^0.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
