[tool.poetry]
name = "writer-framework-default"
version = "0.1.0"
description = ""
authors = ["Andres Montenegro <andresckamilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
writer = {version = "^0.6.0"}
openai = "^1.33.0"
logfire = "^0.41.0"
instructor = "^1.3.2"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
